# mandelbrot

./: CMakeLists.txt  vcpkg.json
shaders/: scene.frag  scene.vert
src/: main.cpp
util/: CMakeLists.txt  shader.cpp  shader.h
